stacks_k8s/40_app_argocd/k8s_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${service_name}
  namespace: ${namespace}
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    # Deploymentで指定したPodの名前を指定
    run: ${pod_name}
